# cynthia

./: .gitignore  README.md  __init__.py  config.yaml  pyproject.toml  requirements.txt  run.py  setup.py
.hooks/: pre-commit.git
.hooks/pre-commit/: black
bot/: bot.py
context/: env.py
cynthia/: __init__.py  __main__.py  exceptions.py  pyproject.toml
cynthia/bot/: __init__.py  bot.py  onmessage.py
cynthia/bot/applications/: __init__.py  config.py  control.py  drive.py  help.py  nxbt.py  pokemon_db.py  roku.py  shell.py  status.py  test.py  tree.py  web.py
cynthia/bot/cogs/: status.py
cynthia/bot/messenger/: messenger.py  response_matrix.py
cynthia/context/: app_info.py  config.py  context.py  defaults.py
cynthia/daemons/: __init__.py  daemon.py  dman.py  uvc.py
cynthia/utils/: auth.py  db.py  drive.py  logger.py  namespace.py  nxbt_utils.py  onmessage.py  strings.py  types.py  uvc.py
utils/: namespace.py
