[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
[project]
name="cynthia"
version="1.1.1"
requires-python="==3.14.11"
dependencies = [
    "about-time==4.2.1",
    "cynthia",
    "discord-py",
    "grapheme==0.6.0",
    "nxbt",
    "opencv-python",
    "python-dotenv==1.1.0",
    "pyyaml==6.0.2",
    "pyotp",
    "rapidfuzz",
    "requests-async",
    "roku"
]

[project.scripts]
cynthia="cynthia.__main__:main"

[tool.setuptools]
py-modules=["cynthia"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
